[cactpot-solver] Hacky fix for a bug where payout table doesn't stretch vertically
So strange. I have no idea why it was broken. If someone ever figures it out, please let me know!

--- a/ffxiv-mini-cactpot-solver/index.css
+++ b/ffxiv-mini-cactpot-solver/index.css
@@ -50,9 +50,8 @@ body {
 }
 
 #app {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-auto-flow: column;
     column-gap: 0.5em;
 
     font-weight: bold;
